Several more changes - updated drone textures to allow item tinting - PneumaticCraftUtils cleanup, deleted some unneeded methods - using (hopefully) safer NBT copy in getShareTag() - coord tracker indicator expands when looked at - fixed underwater fog level when scuba is active